# BASIC-M6502.rs

./: .gitignore  Cargo.toml  LICENSE  README.md
claude-code-glm4.6/: ANALYSIS.md  Cargo.toml  RUST_IMPLEMENTATION_PLAN.md
claude-code-glm4.6/examples/: stop_cont_demo.bas
claude-code-glm4.6/src/: lib.rs  main.rs
claude-code-glm4.6/src/error/: mod.rs
claude-code-glm4.6/src/evaluator/: evaluator.rs  mod.rs
claude-code-glm4.6/src/functions/: functions.rs  mod.rs
claude-code-glm4.6/src/lexer/: lexer.rs  mod.rs  tokens.rs
claude-code-glm4.6/src/parser/: mod.rs  parser.rs
claude-code-glm4.6/src/runtime/: memory.rs  mod.rs  string_pool.rs
claude-code-glm4.6/src/utils/: mod.rs  (+1 more)
claude-code-glm4.6/test/: test_colon.bas  test_colon_complex.bas  test_colon_simple.bas  test_dim.bas  test_dim_simple.bas  test_simple_string.bas  test_string_functions.bas
claude-code-glm4.6/tests/: integration_tests.rs
cursor-sonnet-openspec/: Cargo.toml  README.md  chat_debug1.md  chat_spec.md  m6502.asm  raw_project.md  test.bas
cursor-sonnet-openspec/examples/: hello.bas  loop_test.bas  random_demo.bas  test_load_save.bas
cursor-sonnet-openspec/md_by_ai/: ADVANCED_STATEMENTS_REPORT.md  CHAPTER_16_SUMMARY.md  ERROR_HANDLING_AND_REPL_REPORT.md  FINAL_REPORT.md  IO_SYSTEM_REPORT.md  LOAD_SAVE_IMPLEMENTATION_REPORT.md  PROGRESS.md  PROGRESS_SUMMARY.md  REPL_IMPLEMENTATION_REPORT.md  SESSION_REPORT.md
cursor-sonnet-openspec/openspec/: project.md
cursor-sonnet-openspec/src/: ast.rs  error.rs  executor.rs  main.rs  parser.rs  runtime.rs  token.rs  tokenizer.rs  variables.rs
(+59 files in other folders)
